tests/invalid/bytearray_wrong_arg_count/main.py
x: bytearray = bytearray(1, 2, 3)
